# Library-Management-System

.github/workflows/: main.yml
.postman/: resources.yaml  workflows.yaml
phase1-sql/: .gitignore  data.sql  delete.sql  queries.sql  schema.sql
phase2-data-ingestion/: .gitignore  Constraints_and_Assumptions.txt  api_client.py  api_fetcher.py  data_processor.py  models.py  prototype_format_json.txt  schemas.py  test.py  test_2.py
phase2-data-ingestion/sample_data/: authors.csv  authors_validated.csv  books.csv  books_validated.csv  libraries.csv  libraries_validated.csv  members.csv  members_validated.csv
phase3-django-api/: .coverage  .gitignore  pyproject.toml  pytest.ini  schema.yaml  swagger.yaml
phase3-django-api/.github/workflows/: ci.yaml
phase3-django-api/config/: asgi.py  urls.py  wsgi.py
phase3-django-api/config/settings/: base.py  production.py  testing.py
phase3-django-api/lms_data/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
phase3-django-api/lms_data/fixtures/: initial_data.json
phase3-django-api/lms_data/migrations/: 0001_initial.py
phase3-django-api/lms_data/tests/: factories.py  test_api.py  test_factories.py  test_fixtures.py  test_models.py  test_serializers.py
postman/collections/New Collection/api/.resources/: definition.yaml
postman/specs/Library Management System API/: schema.yml
