[project]
name = "phase3-django-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "coverage>=7.13.5",
    "django>=6.0.2",
    "django-filter>=25.2",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "factory-boy>=3.3.3",
    "psycopg[binary]>=3.3.3",
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
    "python-decouple>=3.8",
]
